# fhir-ontology-generator

./: .env  .gitattributes  .gitignore  CHANGELOG.md  CONSENT_PROVISIONS.CSV  DEVELOPMENT.md  DatabaseManager.py  Elastic-README.md  FHIRProfileConfiguration.py  FHIRProfileToUIProfiles.py  FeasibilityUI-Display.xlsx  Helper.py  LogicalModelToProfile.py  MapperDataModel.py  MappingDataModel.py  Merger-README.md  NAPKON_Typen_SCT_CODEX.CSV  Parcel-README.md  README.md  Top300Loinc.xml.REMOVED.git-id  UiDataModel.py  combined-consent-generation.py  geccoToAqlMapping.py  geccoToUI.py  geccoToUIProfiles.py  generate_elasticsearch_files.py  generate_full_ontology.sh  helper.py  kdsToAqlMapping.py  logging.toml  logging.yaml  main.py  mapper.py  mapping.json  parcel_final_ontology.py  pyproject.toml  queryTermCodeMapper.py  requirements.txt  termCodeTree.py  termEntryToExcel.py  (+2 more)
availability/: .gitignore  Measure-CdsAvailabilityMeasure.json  README.md  pyproject.toml  stratum-to-context.json
availability/constants/: fhir.py  measure.py
availability/core/: element_availability.py  exceptions.py
availability/core/element/: generator.py
availability/measure_shorthand/: generate-availability-measure.sh
availability/measure_shorthand/fsh-generated/: fsh-index.json  fsh-index.txt
availability/scripts/: element_availability.py  generate-coding-availability-measure.sh  generate_dse_element_availability.py
availability/src/availability.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
common/: README.md  pyproject.toml
common/config/: project.py
common/constants/: fhir.py  http.py  project.py
common/exceptions/: __init__.py  profile.py  translation.py  typing.py
common/model/: fhirpath.py  pydantic.py  structure_definition.py
common/model/fhir/: functions.py  pydantic.py  structure_definition.py  types.py
common/model/pydantic/: __init__.py  mixins.py
common/resources/fhirpath/: fhirpath.g4  fhirpath.interp  fhirpathLexer.interp
common/resources/sql/: delete_statements.sql  init.sql  remove_fk_constraints.sql
common/src/common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
common/typing/: cql.py  fhir.py  filesystem.py  functions.py  http.py
common/util/: classes.py  functions.py  model.py  wrapper.py
common/util/codec/: functions.py  json.py
common/util/collections/: functions.py
common/util/docker/: container.py
common/util/fhir/: __init__.py  enums.py  fhirpath.py  parameters.py  structure_definition.py  terminal.py
common/util/http/: client.py  (+4 more)
(+6600 files in other folders)
