[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "availability"
version = "4.1.0"
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "cachetools>=7.1.4",
    "fhir-resources==8.0.0",
    "isodate==0.7.2",
    "pydantic~=2.10.5",
    "requests==2.31.0",
    "typing-extensions~=4.12.2",
    "common"
]
[project.scripts]
    generate-coding-availability-measure = "dataportal_generator.availability.scripts.generate_coding_availability_measure:__main"
    generate-element-availability-measure = "dataportal_generator.availability.scripts.generate_element_availability_measure:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
common = { workspace = true }
