[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "4.1.0"
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "attrs~=24.2.0",
    "beautifulsoup4~=4.11.2",
    "cachetools>=7.1.4",
    #"docker~=6.1.3",
    #"fastjsonschema~=2.21.1",
    "fhir-resources==8.0.0",
    "isodate==0.7.2",
    #"json-source-map==1.0.5",
    #"jsonpath-ng~=1.7.0",
    #"jsonschema==4.23.0",
    #"lxml==5.3.0",
    #"networkx==2.6.3",
    #"psycopg2==2.9.10",
    "pydantic~=2.10.5",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "requests==2.31.0",
    #"sortedcontainers==2.4.0",
    "typing-extensions~=4.12.2",
    "urllib3~=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"